packages/errors/test/__snapshots__/CLOUD_CANNOT_CONFIRM_ARTIFACTS.ansi
[31mWarning: We encountered an error while confirming the upload of artifacts for this spec.[39m
[31m[39m
[31mThese results will not display artifacts.[39m
[31m[39m
[31mThis error will not affect or change the exit code.[39m
[31m[39m
[31m[95mError: fail whale[39m[31m[39m